# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,10 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
+import healthRouter from "./health.js";
+import translateRouter from "./translate/index.js";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(translateRouter);
 
 export default router;
